# Yurta_DE

./: meson.build
data/: meson.build  org.yurta.settings.gschema.xml  yurta-settings.desktop
include/: main.h
include/bar/: bar.h  battery.h  clock.h  sound.h
include/settings/: main.h  yurta-wallpaper-page.h
resources/: resources.gresource.xml
resources/styles/: bar.css
resources/ui/: bar.ui  settings_de.ui  settings_de_wallpaper_page.ui
src/: main.c
src/bar/: bar.c  battery.c  clock.c  main.c  meson.build  sound.c
src/settings/: main.c  meson.build  yurta-wallpaper-page.c
